--- a/software.html
+++ b/software.html
@@ -68,10 +68,10 @@
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/carta/98447423-6de9-4b9d-9740-ccdf9a628579'>Carta - Senior Software Engineer - Execution Services</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://fujitsu.referrals.selectminds.com/jobs/sdsd-software-developer-4748'>SDSD Software Developer - Fujitsu Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fujitsu.referrals.selectminds.com/jobs/sdsd-software-developer-4748'>SDSD Software Developer - Fujitsu Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -161,7 +161,7 @@
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=ozyv9fwv&__jvst=Employee&__jvsd=sa5Jzgwi&__jvsc=Twitter&bid=nBLeWLwM'>Splunk Careers - Senior Software Engineer in Test - Machine Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=ozyv9fwv&__jvst=Employee&__jvsd=sa5Jzgwi&__jvsc=Twitter&bid=nBLeWLwM'>Splunk Careers - Senior Software Engineer in Test - Machine Learning</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -233,7 +233,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/liveopscloud/job/ouvCafwv'>Serenova Careers - Software Engineer (Quality Engineer)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liveopscloud/job/ouvCafwv'>Serenova Careers - Software Engineer (Quality Engineer)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -317,11 +317,11 @@ machine learning by reimagining the power and value of search to create all-new
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Ruby Software Engineer at Farmdrop.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wordstream.workable.com/jobs/1085091'>Software Engineer - Apply online - WordStream - Jobs</a></h5> 
+<h5><a href='https://wordstream.workable.com/jobs/1085091'>Software Engineer - Apply online - WordStream - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Software Engineer at WordStream.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juullabs/jobs/1788957'>Job Application for Senior Mobile SDET (Software Developer In Test) at JUUL Labs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1788957'>Job Application for Senior Mobile SDET (Software Developer In Test) at JUUL Labs</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -346,7 +346,7 @@ SmartNews, Inc.</p>
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://activision.referrals.selectminds.com/jobs/software-engineer-automation-treyarch-4022'>Software Engineer-Automation - Treyarch - Activision Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/software-engineer-automation-treyarch-4022'>Software Engineer-Automation - Treyarch - Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... TEST SOFTWARE ENGINEER. We are seeking a Software Engineer who will 
 contribute to our AAA franchise as a member of our Automation and QA teams.</p>
@@ -385,7 +385,7 @@ state-of-the-art software, hardware and services for any type of network, Nokia?
 <p>Jul 16, 2019 ... You will strengthen one of our development teams as a Software Developer. 
 Together with your team you design and develop a desktop application or a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/14de5045-66b9-4a81-b01e-38ceafb745f3'>Fanatics - Principal Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/14de5045-66b9-4a81-b01e-38ceafb745f3'>Fanatics - Principal Software Engineer</a></h5> 
 <p><span class="badge badge-light">India, Hyderabad</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -415,7 +415,7 @@ Assistant Operations Analyst Sophia Antipolis; Chip Package Codesign Engineer
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369766002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369766002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -439,7 +439,7 @@ Assistant Operations Analyst Sophia Antipolis; Chip Package Codesign Engineer
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of Software Developer at ClickBank.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indev.workable.com/jobs/1081321'>INDEV Software SA - Jobs: Software Developer (Microsoft .NET ...</a></h5> 
+<h5><a href='https://indev.workable.com/jobs/1081321'>INDEV Software SA - Jobs: Software Developer (Microsoft .NET ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of Software Developer (Microsoft .NET) at INDEV 
 Software SA.</p>
@@ -453,7 +453,7 @@ Software SA.</p>
 <p>Jul 20, 2019 ... Apply online for the job of Sitecore C#/ASP.NET Software Developer at 
 PEOPLECERT.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emw.workable.com/j/7608EE5314?viewed=true'>AAS3780-0 - Fullstack Software Developer, The ... - EMW, Inc. - Jobs</a></h5> 
+<h5><a href='https://emw.workable.com/j/7608EE5314?viewed=true'>AAS3780-0 - Fullstack Software Developer, The ... - EMW, Inc. - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of AAS3780-0 - Fullstack Software Developer, The Hague 
 - Mon 22nd July at EMW, Inc.</p>
